--- a/report/report.bib
+++ b/report/report.bib
@@ -277,3 +277,13 @@ Unique-ID = {{ISI:000254559900008}},
     url = {http://www.amazon.com/exec/obidos/redirect?tag=citeulike07-20\&path=ASIN/0954161734},
     year = {2003}
 }
+@book{teschl2012ordinary,
+  title={Ordinary differential equations and dynamical systems},
+  author={Teschl, G.},
+  isbn={9780821883280},
+  lccn={2012015024},
+  series={Graduate Studies in Mathematics},
+  url={http://books.google.se/books?id=FSObYfuWceMC},
+  year={2012},
+  publisher={Amer Mathematical Society}
+}
